Fix description wrapping

--- a/assets/css/frontend.less
+++ b/assets/css/frontend.less
@@ -770,6 +770,10 @@
 			}
 		}
 
+		&__description {
+			word-wrap: break-word;
+		}
+
 		&__verified-badge {
 			color: #15cd72;
 			display: inline-block;
@@ -1064,6 +1068,10 @@
 				text-decoration: none;
 				color: inherit;
 			}
+		}
+
+		&__description {
+			word-wrap: break-word;
 		}
 
 		&__online-badge {
